terraform/main.tf
provider "aws" {
  region = var.region
}

data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
    # Debug : $aws ec2 describe-images --filters Name=name,Values="###"
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

data "aws_vpc" "default"{
  default = true
}

locals {
  default_tags = {
    Project = var.instance_name
    Owner   = "devops-bootstrap"
  }
}

resource "aws_key_pair" "main" {
  key_name   = var.key_name
  public_key = file(var.public_key_path)
  tags       = local.default_tags
}

resource "aws_instance" "web" {
  ami = data.aws_ami.ubuntu.id
  instance_type               = var.instance_type
  key_name                    = aws_key_pair.main.key_name
  associate_public_ip_address = true
  vpc_security_group_ids = [aws_security_group.web_sg.id]

  tags = merge(
    local.default_tags, { Name = var.instance_name }
  )
}

resource "aws_security_group" "web_sg" {
  name = "${var.instance_name}-sg"
  description = "Allow SSH and HTTP"
  vpc_id = data.aws_vpc.default.id

  ingress {
    description = "SSH from anywhere"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP from anywhere"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbond traffic"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags       = local.default_tags
}
